# UseCaseSimulator

./: .pylintrc  LICENSE  README.md  architecture_design.md  main.py  pyproject.toml  pytest.ini  requirements.txt  run_console.py  run_web.py  setup.cfg  setup.py  update_issues.py  web_ui_architecture.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_request.md  feature_request.md  scenario_request.md
.github/workflows/: ci.yml
.kilocode/rules/: task-references.md
Specs/: github_import.py  tasks_kanban.csv
data/: leaderboard.json
data/analytics/: leaderboard.json
data/saves/: disk_space_test.json  integration_test.json  integrity_test.json  test_auto_create.json  test_load.json  test_save.json
data/scenarios/: first_scenario.json  template_boom_economy.json  template_global_expansion.json  template_recession.json  template_tech_disruption.json
docs/: README.md  quick_start.md  tutorial.md  user_guide.md
modules/analytics/: __init__.py  analytics_manager.py  chart_generator.py  kpi_calculator.py  leaderboard.py  ranking_system.py  report_generator.py
modules/core/: company.py  event_manager.py  market.py  round_manager.py  simulation_engine.py  simulation_state.py
modules/persistence/: __init__.py  company_persistence.py  data_serializer.py  market_persistence.py  simulation_persistence.py
modules/scenarios/: __init__.py  scenario_loader.py  scenario_manager.py
modules/ui/: console_ui.py
scripts/: install.ps1  install.sh
tests/: __init__.py  conftest.py  test_analytics.py  test_company.py  test_core_engine.py  test_market.py  test_persistence.py  test_simulation_engine.py
tests/fixtures/: company_fixtures.py  market_fixtures.py  simulation_fixtures.py
tests/unit/: test_analytics.py  test_company.py  test_market.py  test_persistence.py  test_simulation_engine.py
web_ui/: ColorPrompt.txt  __init__.py  app.py  config.py
web_ui/routes/: __init__.py  api.py  game.py  main.py
web_ui/static/css/: main.css
web_ui/static/js/: app.js
web_ui/templates/: analytics.html  base.html  dashboard.html  decisions.html  load_game.html  menu.html  new_game.html  scenario_designer.html
web_ui/templates/errors/: 404.html
web_ui/utils/: __init__.py  session_manager.py
